--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 				<span class="corp"></span>
 				<p class="subtext">наружная и indoor-реклама</p>
 			</div>
-			<div class="divider"></div>
-			<div class="logo-right">
+			<div class="divider desktop"></div>
+			<div class="logo-right desktop">
 				<span>от экспертов</span><br>
 				<span>дизайна и маркетинга</span>
 			</div>
@@ -57,12 +57,12 @@
 	<div class="section" id="sec1" data-anchor="section1">
 		<div class="container_wrap">
 			<div class="sec1_content">
-				<h1>вашу рекламу увидят все!</h1>
+				<h1>вашу рекламу <span>увидят все!</span></h1>
 				<p>Реклама на пилларсах в любой точке России! Увеличьте доход своего бизнеса в 2 - 10 раз без огромных вложений и энергозатрат</p>
-				<button><span>Получить бесплатную консультацию</span></button>
+				<button><span class="desktop">Получить бесплатную консультацию</span><span class="mobile">Бесплатная консультация</span></button>
 			</div>
 		</div>
-		<div class="scrollDown"></div>
+		<div class="scrollDown desktop"></div>
 	</div>
 	<div class="section" id="sec2" data-anchor="section2">
 		<div class="container_wrap">
@@ -88,7 +88,7 @@
 				<button><span>Заказать</span></button>
 			</div>
 		</div>
-		<div class="scrollDown black"></div>
+		<div class="scrollDown black desktop"></div>
 	</div>
 	<div class="section" id="sec3" data-anchor="section3">
 		<div class="container_wrap">
@@ -136,7 +136,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="scrollDown"></div>
+		<div class="scrollDown desktop"></div>
 		<div class="sec3_banner"></div>
 	</div>
 	<div class="section" id="sec4" data-anchor="section4">
@@ -172,7 +172,7 @@
 			</div>
 			<p class="slogan">эффективно. недорого. проверено - работает безотказно</p>
 		</div>
-		<div class="scrollDown black"></div>
+		<div class="scrollDown black desktop"></div>
 	</div>
 	<div class="section" id="sec5" data-anchor="section5">
 		<div class="sideScheme">
@@ -298,7 +298,7 @@
 			</div>
 			<div class="scrollDown black"></div>
 		</div>
-		<div class="scrollDown black"></div>
+		<div class="scrollDown black desktop"></div>
 	</div>
 	<div class="section" id="sec6" data-anchor="section6">
 		<div class="sec6_content">
@@ -326,7 +326,7 @@
 			</div>
 			<button><span>Отзывы о нас</span></button>
 		</div>
-		<div class="scrollDown"></div>
+		<div class="scrollDown desktop"></div>
 	</div>
 	<div class="section" id="sec7" data-anchor="section7">
 		<div class="container_wrap">
@@ -365,7 +365,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="scrollDown black"></div>
+		<div class="scrollDown black desktop"></div>
 	</div>
 	<div class="section" id="sec8" data-anchor="section8">
 		<div class="container_wrap">
@@ -380,7 +380,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="scrollDown black"></div>
+		<div class="scrollDown black desktop"></div>
 	</div>
 	<div class="section" id="sec9" data-anchor="section9">
 		<div class="container_wrap">
@@ -409,7 +409,7 @@
 					<a href="#">Доп. материалы по пилларсам</a>
 				</div>
 			</div>
-			<div class="scrollDown black"></div>
+			<div class="scrollDown black desktop"></div>
 		</div>
 		<footer>
 			<div class="container_wrap">
