--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 			<div class="sec5_content">
 				<h2>расчет рекламы на пиларсах</h2>
 				<h3>(онлайн калькулятор)</h3>
-				<p class="description">Выберите интересующие вас опции и получите примерный расчет стоимости рекламы за несколько минут. Менеджер свяэется с вами в течение 3 часов с момента отправки заявки для ответа на ваши вопросы и точного расчета. Обратите внимание на оптовые скидки при оптовом заказе рекламы на 3, 6 и 12 месяцев</p>
+				<p class="description">Выберите интересующие вас опции и получите примерный расчет стоимости рекламы за несколько минут. Менеджер свяжется с вами в течение 3 часов с момента отправки заявки для ответа на ваши вопросы и точного расчета. Обратите внимание на оптовые скидки при оптовом заказе рекламы на 3, 6 и 12 месяцев</p>
 				<form>
 					<div class="calcSlide slide1 active">
 						<div class="input_row">
@@ -296,7 +296,7 @@
 					</div>
 				</form>
 			</div>
-			<div class="scrollDown black"></div>
+			<div class="scrollDown black desktop"></div>
 		</div>
 		<div class="scrollDown black desktop"></div>
 	</div>
