--- a/index.html
+++ b/index.html
@@ -433,8 +433,7 @@
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/scrolloverflow.min.js"></script>
-	<script src="js/fullpage.parallax.min.js"></script>
-	<script src="js/jquery.fullpage.extensions.min.js"></script>
+	<script src="js/jquery.fullpage.js"></script>
 	<script src="js/jquery.smooth-scroll.js"></script>
 	<script src="js/jquery.scrollbar.min.js"></script>
 	<script src="script.js"></script>
