--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 				<img src="img/finger_up.png" alt="">
 				<p class="text large">Лучший способ</p>
 				<p class="text">заявить о себе всего за:</p>
-				<p class="text text2">от 15 т.р./мес</p>
+				<p class="text text2">от 6250 р./мес</p>
 				<p class="text text2">от трех дней</p>
 				<p class="text text2">(установка)</p>
 				<button><span>Заказать</span></button>
@@ -130,7 +130,7 @@
 					</span>
 				</div>
 				<div class="bottom_part">
-					<p><b>INDOOR-РКЛАМА</b> - это самый перспективный вид среди наружной рекламы. Помимо пилларсов вы можете заказать у нас рекламу на других носителях по всей России, смотрите видео</p>
+					<p><b>INDOOR-РЕКЛАМА</b> - это самый перспективный вид среди наружной рекламы. Помимо пилларсов вы можете заказать у нас рекламу на других носителях по всей России, смотрите видео</p>
 					<img src="img/sec3_arrow-right.png" alt="">
 					<button><span>Смотреть видео</span></button>
 				</div>
