--- a/index.html
+++ b/index.html
@@ -52,6 +52,121 @@
 			<a href="tel:+73833333333"><span>8 (383) 333 33 33</span><span class="icon"><i class="fa fa-phone" aria-hidden="true"></i></span></a>
 		</div>
 	</div>
+	<div id="sideSizePopup" class="popup">
+		<div class="popup_body">
+			<div class="sideSize_table">
+				<div class="title">Целая сторона</div>
+				<table>
+					<tr>
+						<td class="purple"></td>
+					</tr>
+				</table>
+				<div class="price"><span>32 500</span><span>руб.</span></div>
+			</div>
+			<div class="sideSize_table">
+				<div class="title">1/2 стороны</div>
+				<table>
+					<tr>
+						<td class="purple"></td>
+					</tr>
+					<tr>
+						<td></td>
+					</tr>
+				</table>
+				<div class="price"><span>17 500</span><span>руб.</span></div>
+			</div>
+			<div class="sideSize_table">
+				<div class="title">1/3 стороны</div>
+				<table>
+					<tr>
+						<td class="purple"></td>
+					</tr>
+					<tr>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+					</tr>
+				</table>
+				<div class="price"><span>12 500</span><span>руб.</span></div>
+			</div>
+			<div class="sideSize_table">
+				<div class="title">1/4 стороны</div>
+				<table>
+					<tr>
+						<td class="purple"></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+				<div class="price"><span>10 000</span><span>руб.</span></div>
+			</div>
+			<div class="sideSize_table">
+				<div class="title">1/5 стороны</div>
+				<table>
+					<tr>
+						<td class="purple"></td>
+					</tr>
+					<tr>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+					</tr>
+				</table>
+				<div class="price"><span>8 500</span><span>руб.</span></div>
+			</div>
+			<div class="sideSize_table">
+				<div class="title">1/6 стороны</div>
+				<table>
+					<tr>
+						<td class="purple"></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+				<div class="price"><span>7 500</span><span>руб.</span></div>
+			</div>
+			<div class="sideSize_table">
+				<div class="title">1/8 стороны</div>
+				<table>
+					<tr>
+						<td class="purple"></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+					</tr>
+				</table>
+				<div class="price"><span>6 250</span><span>руб.</span></div>
+			</div>
+		</div>
+	</div>
 
 <div id="fullpage">
 	<div class="section" id="sec1" data-anchor="section1">
@@ -192,6 +307,12 @@
 								<p>Количество сторон <span class="info side_info">i</span>:</p>
 								<span class="minus"><span></span></span>
 								<input type="text" value="1" readonly>
+								<span class="plus"><span></span><span></span></span>
+							</div>
+							<div class="input_wrap">
+								<p>Размер стороны <span class="info side_info" id="sideSizeTrigger">i</span>:</p>
+								<span class="minus"><span></span></span>
+								<input type="text" value="1/2">
 								<span class="plus"><span></span><span></span></span>
 							</div>
 						</div>
@@ -433,8 +554,7 @@
 
 	<script src="js/jquery-3.2.1.min.js"></script>
 	<script src="js/scrolloverflow.min.js"></script>
-	<script src="js/fullpage.parallax.min.js"></script>
-	<script src="js/jquery.fullpage.extensions.min.js"></script>
+	<script src="js/fullpage.js"></script>
 	<script src="js/jquery.smooth-scroll.js"></script>
 	<script src="js/jquery.scrollbar.min.js"></script>
 	<script src="script.js"></script>
