--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 							<div class="input_wrap">
 								<p>Количество сторон <span class="info side_info">i</span>:</p>
 								<span class="minus"><span></span></span>
-								<input type="text" value="1" readonly>
+								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
 							</div>
 							<div class="input_wrap">
@@ -327,7 +327,7 @@
 							</div>
 							<div class="input_wrap">
 								<span class="minus"><span></span></span>
-								<input type="text" value="1" readonly>
+								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
 							</div>
 						</div>
@@ -339,7 +339,7 @@
 							<div class="input_wrap">
 								<p>Количество вариантов <span>(обычно хватает одного):</span><span class="info">i<span class="info_description">Если вы заказываете размещение рекламы на одной стороне и на один месяц - нужна печать одиного баннера. Если на большее количество сторон или макетов, то по их количеству</span></span></p>
 								<span class="minus"><span></span></span>
-								<input type="text" value="1" readonly>
+								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
 							</div>
 						</div>
@@ -350,7 +350,7 @@
 							<div class="input_wrap">
 								<p>Количество макетов: <span class="info">i<span class="info_description">Если вы заказываете размещение рекламы на одной стороне и на один месяц - нужна печать одиного баннера. Если на большее количество сторон или макетов, то по их количеству</span></span></p>
 								<span class="minus"><span></span></span>
-								<input type="text" value="1" readonly>
+								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
 							</div>
 						</div>
@@ -373,7 +373,7 @@
 							<div class="input_wrap">
 								<p>Количество минут в месяц:</p>
 								<span class="minus"><span></span></span>
-								<input type="text" value="1" readonly>
+								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
 							</div>
 						</div>
@@ -384,7 +384,7 @@
 							<div class="input_wrap">
 								<p>Количество копий:</p>
 								<span class="minus"><span></span></span>
-								<input type="text" value="1" readonly>
+								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
 							</div>
 						</div>
