--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	        <li><a href="#section9">Контакты</a></li>
 	    </ul>
 	</div>
-	<div class="header">
+	<div class="header black">
 		<div class="hamburger">
 			<span></span>
 			<span></span>
@@ -165,6 +165,13 @@
 				</table>
 				<div class="price"><span>6 250</span><span>руб.</span></div>
 			</div>
+		</div>
+	</div>
+	<div id="gratitudeRequest" class="popup">
+		<div class="gratitude_body">
+			<div class="close"><span></span><span></span></div>
+			<div class="title">Спасибо за заявку!</div>
+			<p>Наш менеджер свяжется с вами втечение трёх часов для уточнения деталей заказа</p>
 		</div>
 	</div>
 
@@ -309,7 +316,7 @@
 								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
 							</div>
-							<div class="input_wrap">
+							<div class="input_wrap side">
 								<p>Размер стороны <span class="info side_info" id="sideSizeTrigger">i</span>:</p>
 								<span class="minus"><span></span></span>
 								<input type="text" value="1/2">
@@ -337,7 +344,7 @@
 								<input type="checkbox" id="designOrder"><label for="designOrder">Дизайн макета <span>(1 вариант - от 2000 р)</span></label>
 							</div>
 							<div class="input_wrap">
-								<p>Количество вариантов <span>(обычно хватает одного):</span><span class="info">i<span class="info_description">Если вы заказываете размещение рекламы на одной стороне и на один месяц - нужна печать одиного баннера. Если на большее количество сторон или макетов, то по их количеству</span></span></p>
+								<p>Количество вариантов <span>(обычно хватает одного):</span><span class="info first">i<span class="info_description">Если вы заказываете размещение рекламы на одной стороне и на один месяц - нужна печать одиного баннера. Если на большее количество сторон или макетов, то по их количеству</span></span></p>
 								<span class="minus"><span></span></span>
 								<input type="text" value="1">
 								<span class="plus"><span></span><span></span></span>
@@ -502,6 +509,16 @@
 			</div>
 		</div>
 		<div class="scrollDown black desktop"></div>
+	</div>
+	<div class="section" id="sec85" data-anchor="section85">
+		<div class="container_wrap">
+			<div class="sec85_content">
+				<div class="title">Для организаторов мероприятий и спикеров</div>
+				<p>Проводите мероприятия для бизнесменов или сдаете под них помещения?</p><p>Мы занимаемся установкой рекламных пилларсов в местах проведения бизнес-семинаров, курсов, прочих встреч. </p><p>Суть такая: мы устанавливаем у вас свои рекламные конструкции, вы продаете места на них слушателям ваших курсов, получаете за это +60000 - 150000 руб. (с каждого вашего мероприятия). </p><p>Ваши затраты времени: не более 1 ч. Ни о чем думать не надо, мы даем все скрипты, тексты, инструкции, обучаем менеджеров</p>
+				<button>Детали в презентации</button>
+			</div>
+		</div>
+		<div class="scrollDown desktop"></div>
 	</div>
 	<div class="section" id="sec9" data-anchor="section9">
 		<div class="container_wrap">
